infrastructure/ibmcloud-galasadev-cluster/galasa-development/framework/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: framework
  name: framework
  namespace: galasa-development
spec:
  ports:
    - port: 80
  selector:
    app: framework
